# ctxrecall

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: architecture.md
migrations/: 001_initial.sql  002_issues.sql  003_transcripts.sql  004_fts.sql  005_issue_status_id.sql  006_workflow_states.sql  007_issue_team_id.sql  008_issue_project_id.sql  009_labels.sql  010_issue_assignee_id.sql  011_label_team_id.sql  012_document_file_path.sql  013_status_hotkeys.sql  014_seed_themes.sql  015_add_nord_last_horizon_themes.sql  016_issue_branches.sql
src/: action.rs  app.rs  errors.rs  event.rs  git.rs  logging.rs  main.rs  tui.rs
src/claude/: context.rs  mod.rs  session.rs  transcript.rs
src/components/: account_picker.rs  branch_picker.rs  command_palette.rs  dashboard.rs  document_viewer.rs  filter_picker.rs  help_overlay.rs  issue_create.rs  issue_detail.rs  issue_edit.rs  issue_list.rs  mod.rs  search.rs  settings.rs  status_bar.rs  transcript_viewer.rs
src/config/: hotkeys.rs  mod.rs  theme.rs  toml_io.rs
src/db/: branch_repo.rs  config_repo.rs  document_repo.rs  issue_repo.rs  mod.rs  search_repo.rs  session_repo.rs
src/llm/: claude_api.rs  mod.rs  ollama.rs  openai.rs  summarizer.rs
src/tmux/: layout.rs  mod.rs
src/tracker/: linear.rs  mod.rs  sync.rs  types.rs
src/widgets/: dropdown.rs  editable_field.rs  fuzzy_list.rs  mod.rs  modal.rs
