[package]
name = "ctxrecall"
version = "0.1.1"
edition = "2024"
default-run = "ctxrec"
description = "A TUI issue manager with Linear sync and Claude Code integration"
license = "MIT"
repository = "https://github.com/illuminitllc/ctxrecall"
readme = "README.md"
keywords = ["tui", "linear", "issue-tracker", "claude", "project-management"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ctxrec"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

# Async trait
async-trait = "0.1"

# Tmux
tmux_interface = "0.3"

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Paths
directories = "6"

# Fuzzy matching
nucleo = "0.5"

# Temp files
tempfile = "3"
